--- a/Student/mobileCSS.css
+++ b/Student/mobileCSS.css
@@ -408,6 +408,7 @@ p {
         grid-template-areas: 'sourceP1 sourceP2';
         grid-template-columns: 50% 50%;
         justify-items: center;
+        padding: 0 0.1vw;
     }
 
     p {
