--- a/Student/laptopCSS.css
+++ b/Student/laptopCSS.css
@@ -122,6 +122,13 @@ h2 {
     border-radius: 0.5vw 0.5vw 0 0;
 }
 
+h5 {
+    max-width: 40vw;
+    font-size: 0.9vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 100;
+}
+
 #letsLearn,
 #projects,
 #csAsOption {
@@ -392,4 +399,8 @@ p {
 
 .normalFontSize {
     font-size: 1.2vw;
+}
+
+.otherPage {
+    font-size: 1vw;
 }
