--- a/Student/laptopCSS.css
+++ b/Student/laptopCSS.css
@@ -404,3 +404,19 @@ p {
 .otherPage {
     font-size: 1vw;
 }
+
+#toast {
+    max-width: max-content;
+    position: fixed;
+    bottom: 0.5vw;
+    left: 50%;
+    transform: translate(-50%, 0);
+    text-align: center;
+    background-color: #1a1919a6;
+    color: rgb(255, 255, 255);
+    padding: 0.5vw;
+    border-radius: 0.5vw;
+    font-size: 1vw;
+    animation: appear 0.2s;
+    display: none;
+}
