--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -16,17 +16,14 @@ body {
 }
 
 #container {
-    width: 98vw;
-    height: 96vh;
     max-height: 96vh;
-    position: fixed;
-    left: 50%;
-    transform: translate(-50%, 0);
     overflow-y: scroll;
     display: grid;
     grid-template-areas: 'title title' 'contact contact' 'game projects';
     align-items: center;
     justify-content: center;
+    grid-template-rows: max-content;
+    column-gap: 2vw;
 }
 
 h1 {
@@ -70,68 +67,6 @@ p {
     margin: 0;
 }
 
-@keyframes letterDrop {
-    0% {
-        transform: translateY(-200%);
-        opacity: 0;
-    }
-
-    5% {
-        opacity: 0.7;
-    }
-
-    50% {
-        transform: translateY(0%);
-        opacity: 1;
-    }
-
-    65% {
-        transform: translateY(15%);
-        opacity: 1;
-    }
-
-    75% {
-        transform: translateY(17%);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateY(0%);
-        opacity: 1;
-    }
-}
-
-@keyframes letterDropDeeper {
-    0% {
-        transform: translateY(-200%);
-        opacity: 0;
-    }
-
-    5% {
-        opacity: 0.7;
-    }
-
-    50% {
-        transform: translateY(0%);
-        opacity: 1;
-    }
-
-    65% {
-        transform: translateY(22%);
-        opacity: 1;
-    }
-
-    75% {
-        transform: translateY(25%);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateY(0%);
-        opacity: 1;
-    }
-}
-
 #H {
     animation: letterDrop 0.4s linear forwards 0.2s;
     color: #FEBE98;
@@ -163,6 +98,20 @@ p {
     font-size: 4.3vw;
 }
 
+#contactPara {
+    grid-area: contactPara;
+}
+
+#contactTitle {
+    grid-area: contactTitle;
+}
+
+/* #fallingLettersLeft {
+    grid-area: fallingLettersLeft;
+    opacity: 0;
+    animation: fall1 1s infinite linear forwards;
+} */
+
 #contact {
     width: 70vw;
     max-width: 70vw;
@@ -172,6 +121,9 @@ p {
     margin: 4vw auto;
     text-align: center;
     grid-area: contact;
+    /* display: grid;
+    grid-template-areas: 'contactTitle contactTitle' 'fallingLettersLeft contactPara' 'fallingLettersLeft details';
+    overflow: hidden; */
 }
 
 #game,
@@ -187,6 +139,13 @@ p {
 
 #game {
     grid-area: game;
+}
+
+#game>h2,
+#projects>h2 {
+    /* background-color: rgb(96, 200, 165); */
+    /* background-color: rgb(252, 225, 188); */
+    background-color: #ffcbad;
 }
 
 #projects {
@@ -231,6 +190,7 @@ p {
     align-items: center;
     justify-items: center;
     font-size: 1.2vw;
+    grid-area: details;
 }
 
 #toast {
@@ -247,4 +207,53 @@ p {
     font-size: 1vw;
     animation: appear 0.2s;
     display: none;
+}
+
+@keyframes fall1 {
+    0% {
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+
+    5% {
+        opacity: 1;
+        transform: translateY(-70%);
+    }
+
+    10% {
+        transform: translateY(-50%);
+    }
+
+    25% {
+        transform: translateY(-30%);
+    }
+
+    40% {
+        transform: translateY(-10%);
+    }
+
+    50% {
+        transform: translateY(0%);
+    }
+
+    70% {
+        transform: translateY(10%);
+    }
+
+    80% {
+        transform: translateY(30%);
+    }
+
+    90% {
+        transform: translateY(50%);
+    }
+
+    95% {
+        transform: translateY(70%);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(100%);
+    }
 }
