--- a/Recruiter/recCSS.css
+++ b/Recruiter/recCSS.css
@@ -39,6 +39,18 @@ h3 {
     background-color: #F0CFBA;
 }
 
+h4 {
+    width: max-content;
+    font-size: 1.1vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 100;
+    color: #242424;
+    background-color: rgb(253, 240, 223);
+    padding: 0.3vw 0.5vw;
+    margin: 0 auto;
+    border-radius: 0.5vw;
+}
+
 h5 {
     max-width: 40vw;
     font-size: 0.9vw;
