--- a/Recruiter/Image_sources/mobileCSS.css
+++ b/Recruiter/Image_sources/mobileCSS.css
@@ -12,6 +12,8 @@ hr {
     display: grid;
     grid-template-areas: 'Img1 link1' 'Img2 link2' 'Img3 link3' 'Img4 link4' 'Img5 link5' 'Img6 link6';
     grid-template-columns: 30% 60%;
+    
+    overflow-x: hidden;
 }
 
 h3 {
@@ -48,4 +50,8 @@ p {
     text-align: center;
     margin: 3vw 0vw;
     font-size: 3vw;
+}
+
+p>mark{
+    padding: 1vw;
 }
