--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -1,28 +1,13 @@
-html {
-    scroll-behavior: smooth;
-}
-
 body {
-    width: 100%;
-    height: 100vh;
-    box-sizing: border-box;
-    margin: 0;
-    background-image: url('../body_background.jpg');
     background-size: 30vw;
-    border-left: 1vw solid #464646;
-    border-right: 1vw solid #464646;
-    border-top: 2vh solid #464646;
-    border-bottom: 2vh solid #464646;
 }
 
 #container {
-    max-height: 96vh;
-    overflow-y: scroll;
+    width: 100%;
     display: grid;
     grid-template-areas: 'title title' 'contact contact' 'game projects';
     align-items: center;
     justify-content: center;
-    grid-template-rows: max-content;
     column-gap: 2vw;
 }
 
@@ -51,16 +36,71 @@ h2 {
     border-radius: 0.5vw 0.5vw 0 0;
 }
 
-#hello {
-    width: max-content;
-    text-align: center;
-    margin: 4vw auto 0 auto;
-    background-color: rgba(255, 255, 255, 0.668);
-    grid-area: title;
-    border-radius: 1vw;
+#tv {
+    width: 75%;
+    grid-area: tv;
+    position: relative;
+    top: 2vw;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    z-index: 0;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
 }
 
-#hello:hover {
+#stopVideo {
+    font-size: 1vw;
+    margin: 0 0.5vw;
+}
+
+#startVideo {
+    font-size: 1vw;
+    margin: 0 0.5vw;
+}
+
+#home {
+    position: absolute;
+    left: 2%;
+    font-size: 1vw;
+}
+
+#buttons {
+    width: 60%;
+    height: max-content;
+    background-color: #281206;
+    border: 0.05vw solid rgb(196, 196, 196);
+    margin: 0 auto;
+    padding: 0.5vw;
+    position: relative;
+    top: 0.1vw;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#helloWorld {
+    max-width: 50%;
+    grid-area: helloWorld;
+    outline: 3px solid white;
+    outline-offset: -2px;
+    position: absolute;
+    top: 5vw;
+    left: 43%;
+    transform: translate(-50%, 0%);
+    z-index: -1;
+}
+
+#hello {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    margin: 4vw auto;
+}
+
+#hello:hover,
+#startVideo:hover,
+#stopVideo:hover,
+#home:hover {
     cursor: pointer;
 }
 
@@ -103,23 +143,8 @@ p {
     max-width: 20vw;
     outline: 3px solid white;
     outline-offset: -2px;
-    grid-area: video;
     margin: 2.5vw;
 }
-
-#contactPara {
-    grid-area: contactPara;
-}
-
-#contactTitle {
-    grid-area: contactTitle;
-}
-
-/* #fallingLettersLeft {
-    grid-area: fallingLettersLeft;
-    opacity: 0;
-    animation: fall1 1s infinite linear forwards;
-} */
 
 #contact {
     width: max-content;
@@ -129,7 +154,6 @@ p {
     border-radius: 0.8vw;
     margin: 4vw auto;
     text-align: center;
-    grid-area: contact;
     display: grid;
     grid-template-areas: 'contactTitle contactTitle' 'contactPara video' 'details video';
     column-gap: 2vw;
@@ -146,19 +170,11 @@ p {
     text-align: center;
 }
 
-#game {
-    grid-area: game;
-}
-
 #game>h2,
 #projects>h2 {
     /* background-color: rgb(96, 200, 165); */
     /* background-color: rgb(252, 225, 188); */
     background-color: #ffcbad;
-}
-
-#projects {
-    grid-area: projects;
 }
 
 #contact>p {
@@ -195,11 +211,10 @@ p {
     height: max-content;
     margin: 0 auto;
     display: grid;
-    grid-template-areas: 'dropEmail gmail' 'emailID emailID' 'connect LI';
+    grid-template-areas: 'dropEmail gmail' 'connect LI';
     align-items: center;
     justify-items: center;
     font-size: 1.2vw;
-    grid-area: details;
 }
 
 #toast {
