--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -3,48 +3,53 @@ body {
 }
 
 #container {
-    width: 100%;
-    display: grid;
-    grid-template-areas: 'title title' 'contact contact' 'game projects';
-    align-items: center;
-    justify-content: center;
     column-gap: 2vw;
 }
 
 h1 {
-    max-width: 100%;
-    margin: 0;
-    display: inline-block;
-    align-items: center;
-    font-family: "Slackey", sans-serif;
-    font-weight: 400;
-    font-style: normal;
     padding: 0vw 0.5vw;
-    opacity: 0;
-    -webkit-text-stroke: 0.1vw #331d11;
+    font-weight: 900;
+    -webkit-text-stroke: 0.05px #432b1d;
 }
 
 h2 {
-    margin: 0;
     font-size: 1.7vw;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 100;
-    color: #0f0f0f;
     padding: 1.5vw 10vw;
-    background-color: #fca9ac;
-    text-align: center;
-    border-radius: 0.5vw 0.5vw 0 0;
 }
 
 #tv {
     width: 75%;
-    grid-area: tv;
-    position: relative;
-    top: 2vw;
+}
+
+#crack {
+    max-width: 20vw;
+    position: absolute;
+    top: 8vw;
     left: 50%;
     transform: translate(-50%, 0%);
-    z-index: 0;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
+    z-index: 4;
+    /* visibility: hidden; */
+}
+
+#crack2 {
+    max-width: 10vw;
+    position: absolute;
+    top: 22vw;
+    left: 35%;
+    transform: translate(-50%, 0%);
+    z-index: 4;
+    /* visibility: hidden; */
+}
+
+#repair {
+    position: relative;
+    top: 1.5vw;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    font-size: 1.3vw;
+    padding: 0.5vw 1vw;
+    background-color: rgb(154, 215, 251);
 }
 
 #stopVideo {
@@ -63,86 +68,58 @@ h2 {
     font-size: 1vw;
 }
 
-#buttons {
-    width: 60%;
-    height: max-content;
-    background-color: #281206;
-    border: 0.05vw solid rgb(196, 196, 196);
-    margin: 0 auto;
-    padding: 0.5vw;
-    position: relative;
-    top: 0.1vw;
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 #helloWorld {
     max-width: 50%;
-    grid-area: helloWorld;
-    outline: 3px solid white;
-    outline-offset: -2px;
-    position: absolute;
-    top: 5vw;
     left: 43%;
-    transform: translate(-50%, 0%);
-    z-index: -1;
-}
-
-#hello {
-    width: 100%;
-    height: auto;
-    text-align: center;
-    margin: 4vw auto;
 }
 
 #hello:hover,
 #startVideo:hover,
 #stopVideo:hover,
-#home:hover {
+#home:hover,
+#repair:hover {
     cursor: pointer;
 }
 
-p {
-    margin: 0;
-}
-
 #H {
-    animation: letterDrop 0.4s linear forwards 0.2s;
+    animation: letterLeft 0.4s linear forwards 0.45s;
     color: #FEBE98;
     font-size: 3.8vw;
 }
 
-#L1 {
-    animation: letterDrop 0.4s linear forwards 0.3s;
-    color: #c67546;
-    font-size: 4vw;
-}
-
 #E {
-    animation: letterDropDeeper 0.4s linear forwards 0.45s;
+    animation: letterLeft 0.4s linear forwards 0.3s;
     color: #f3ab81;
     font-size: 4.5vw;
 }
 
+#L1 {
+    animation: letterLeft 0.4s linear forwards 0.2s;
+    color: #c67546;
+    font-size: 4vw;
+}
+
 #L2 {
-    animation: letterDrop 0.4s linear forwards 0.6s;
+    animation: letterRight 0.4s linear forwards 0.2s;
     color: #f3ab81;
     font-size: 3.1vw;
 }
 
 
 #O {
-    animation: letterDropDeeper 0.4s linear forwards 0.75s;
+    animation: letterRight 0.4s linear forwards 0.3s;
     color: #FEBE98;
     font-size: 4.3vw;
 }
 
+#exclamation {
+    animation: letterRight 0.4s linear forwards 0.45s;
+    color: #713d1e;
+    font-size: 4.5vw;
+}
+
 #contactVid {
     max-width: 20vw;
-    outline: 3px solid white;
-    outline-offset: -2px;
     margin: 2.5vw;
 }
 
@@ -231,53 +208,4 @@ p {
     font-size: 1vw;
     animation: appear 0.2s;
     display: none;
-}
-
-@keyframes fall1 {
-    0% {
-        transform: translateY(-100%);
-        opacity: 0;
-    }
-
-    5% {
-        opacity: 1;
-        transform: translateY(-70%);
-    }
-
-    10% {
-        transform: translateY(-50%);
-    }
-
-    25% {
-        transform: translateY(-30%);
-    }
-
-    40% {
-        transform: translateY(-10%);
-    }
-
-    50% {
-        transform: translateY(0%);
-    }
-
-    70% {
-        transform: translateY(10%);
-    }
-
-    80% {
-        transform: translateY(30%);
-    }
-
-    90% {
-        transform: translateY(50%);
-    }
-
-    95% {
-        transform: translateY(70%);
-    }
-
-    100% {
-        opacity: 0;
-        transform: translateY(100%);
-    }
 }
