--- a/Other/mobileCSS.css
+++ b/Other/mobileCSS.css
@@ -3,47 +3,20 @@ body {
 }
 
 #container {
-    width: 100%;
-    display: grid;
-    grid-template-areas: 'title title' 'contact contact' 'game projects';
-    align-items: center;
-    justify-content: center;
-    column-gap: 2vw;
+    column-gap: 4vw;
 }
 
 h1 {
-    max-width: 100%;
-    margin: 0;
-    display: inline-block;
-    align-items: center;
-    font-family: "Slackey", sans-serif;
-    font-weight: 400;
-    font-style: normal;
     padding: 5vw 0.5vw 0vw 0.5vw;
-    opacity: 0;
     -webkit-text-stroke: 0.1vw #331d11;
 }
 
 h2 {
-    margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;
-    color: #0f0f0f;
-    padding: 1.5vw 10vw;
-    background-color: #fca9ac;
-    text-align: center;
-    border-radius: 0.5vw 0.5vw 0 0;
 }
 
 #tv {
     width: 96%;
-    grid-area: tv;
-    position: relative;
-    top: 2vw;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    z-index: 0;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
 }
 
 #stopVideo {
@@ -62,83 +35,48 @@ h2 {
     font-size: 2vw;
 }
 
-#buttons {
-    width: 60%;
-    height: max-content;
-    background-color: #281206;
-    border: 0.05vw solid rgb(196, 196, 196);
-    margin: 0 auto;
-    padding: 0.5vw;
-    position: relative;
-    top: 0.1vw;
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 #helloWorld {
     max-width: 65%;
-    grid-area: helloWorld;
-    outline: 3px solid white;
-    outline-offset: -2px;
-    position: absolute;
-    top: 5vw;
     left: 41%;
-    transform: translate(-50%, 0%);
-    z-index: -1;
-}
-
-#hello {
-    width: 100%;
-    height: auto;
-    text-align: center;
-    margin: 4vw auto;
-}
-
-p {
-    margin: 0;
 }
 
 #H {
-    animation: letterDrop 0.4s linear forwards 0.2s;
+    animation: letterLeft 0.4s linear forwards 0.45s;
     color: #FEBE98;
-}
-
-#L1 {
-    animation: letterDrop 0.4s linear forwards 0.3s;
-    color: #c67546;
 }
 
 #E {
-    animation: letterDropDeeper 0.4s linear forwards 0.45s;
+    animation: letterLeft 0.4s linear forwards 0.3s;
     color: #f3ab81;
+}
+
+#L1 {
+    animation: letterLeft 0.4s linear forwards 0.2s;
+    color: #c67546;
 }
 
 #L2 {
-    animation: letterDrop 0.4s linear forwards 0.6s;
+    animation: letterRight 0.4s linear forwards 0.2s;
     color: #f3ab81;
 }
 
-
 #O {
-    animation: letterDropDeeper 0.4s linear forwards 0.75s;
+    animation: letterRight 0.4s linear forwards 0.3s;
     color: #FEBE98;
+}
+
+#exclamation {
+    animation: letterRight 0.4s linear forwards 0.45s;
+    color: #713d1e;
 }
 
 #contactVid {
     max-width: 50vw;
-    outline: 3px solid white;
-    outline-offset: -2px;
     margin: 2.5vw auto;
 }
 
 #contact {
-    width: 80vw;
-    max-width: 80vw;
     background-color: white;
-    border: 0.2vw solid #343434;
-    border-radius: 0.8vw;
     margin: 4vw auto;
     text-align: center;
     display: grid;
@@ -206,6 +144,8 @@ p {
 
     h2 {
         font-size: 4.5vw;
+        padding: 3vw 1vw;
+        border-radius: 2.5vw 2.5vw 0 0;
     }
 
     #H {
@@ -229,9 +169,62 @@ p {
         font-size: 8.9vw;
     }
 
-    p{
+    #exclamation {
+        font-size: 9.5vw;
+    }
+
+    p {
         font-size: 3.5vw;
+    }
+
+    #contact {
+        width: 80vw;
+        max-width: 80vw;
+        border: 0.5vw solid #343434;
+        border-radius: 3vw;
     }
 }
 
-@media screen and (orientation: landscape) {}
+@media screen and (orientation: landscape) {
+    h2 {
+        font-size: 2.5vw;
+        padding: 1.5vw 10vw;
+        border-radius: 2.7vw 2.7vw 0 0;
+    }
+
+    #H {
+        font-size: 6.3vw;
+    }
+
+    #L1 {
+        font-size: 6.6vw;
+    }
+
+    #E {
+        font-size: 7vw;
+    }
+
+    #L2 {
+        font-size: 5vw;
+    }
+
+
+    #O {
+        font-size: 6.9vw;
+    }
+
+    #exclamation {
+        font-size: 7.5vw;
+    }
+
+    p {
+        font-size: 2vw;
+    }
+
+    #contact {
+        width: 80vw;
+        max-width: 80vw;
+        border: 0.5vw solid #343434;
+        border-radius: 3vw;
+    }
+}
