--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -29,7 +29,6 @@ h2 {
     left: 50%;
     transform: translate(-50%, 0%);
     z-index: 4;
-    /* visibility: hidden; */
 }
 
 #crack2 {
@@ -39,7 +38,6 @@ h2 {
     left: 35%;
     transform: translate(-50%, 0%);
     z-index: 4;
-    /* visibility: hidden; */
 }
 
 #repair {
@@ -68,9 +66,11 @@ h2 {
     font-size: 1vw;
 }
 
-#helloWorld {
+#helloWorld,
+#helloWorldGlitch {
     max-width: 50%;
     left: 43%;
+    top: 5vw;
 }
 
 #hello:hover,
