--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -18,6 +18,12 @@ h2 {
     padding: 1.5vw 10vw;
 }
 
+h3 {
+    font-size: 1vw;
+    font-weight: 100;
+    padding: 0.5vw 1vw;
+}
+
 #tv {
     width: 75%;
 }
