--- a/Other/mobileCSS.css
+++ b/Other/mobileCSS.css
@@ -11,8 +11,13 @@ h1 {
     -webkit-text-stroke: 0.1vw #331d11;
 }
 
-h2 {
+h2,
+h3 {
     font-weight: 400;
+}
+
+h3 {
+    max-width: 90vw;
 }
 
 #tv {
@@ -177,6 +182,11 @@ h2 {
         border-radius: 2.5vw 2.5vw 0 0;
     }
 
+    h3 {
+        font-size: 3vw;
+        padding: 1.5vw 2vw;
+    }
+
     #H {
         font-size: 8.3vw;
     }
@@ -213,7 +223,7 @@ h2 {
         border-radius: 3vw;
     }
 
-    #repair{
+    #repair {
         font-size: 3.5vw;
     }
 }
@@ -261,7 +271,7 @@ h2 {
         border-radius: 3vw;
     }
 
-    #repair{
+    #repair {
         font-size: 2vw;
     }
 }
