--- a/Other/mobileCSS.css
+++ b/Other/mobileCSS.css
@@ -184,7 +184,9 @@ h3 {
 
     h3 {
         font-size: 3vw;
-        padding: 1.5vw 2vw;
+        padding: 2vw;
+        border-radius: 2vw;
+        border: 0.3vw solid #464646;
     }
 
     #H {
@@ -233,6 +235,13 @@ h3 {
         font-size: 2.5vw;
         padding: 1.5vw 10vw;
         border-radius: 2.7vw 2.7vw 0 0;
+    }
+
+    h3 {
+        font-size: 2vw;
+        padding: 2vw;
+        border-radius: 2vw;
+        border: 0.3vw solid #464646;
     }
 
     #H {
