--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -56,6 +56,7 @@ h3 {
     font-size: 1.3vw;
     padding: 0.5vw 1vw;
     background-color: rgb(154, 215, 251);
+    border-radius: 0.5vw;
 }
 
 #stopVideo {
