--- a/Other/mobileCSS.css
+++ b/Other/mobileCSS.css
@@ -1,9 +1,10 @@
 body {
-    background-size: 70vw;
+    /* background-size: 70vw; */
 }
 
 #container {
     column-gap: 4vw;
+    background-size: 70vw;
 }
 
 h1 {
@@ -18,6 +19,7 @@ h3 {
 
 h3 {
     max-width: 90vw;
+    margin-bottom: 1vw;
 }
 
 #tv {
@@ -42,6 +44,26 @@ h3 {
     z-index: 4;
 }
 
+#hole {
+    max-width: 11vw;
+    position: absolute;
+    top: 13vw;
+    right: 5%;
+    transform: translate(-50%, 0%);
+    z-index: 4;
+    opacity: 0.85;
+}
+
+#hole2 {
+    max-width: 5vw;
+    position: absolute;
+    top: 6vw;
+    right: 3.5%;
+    transform: translate(-50%, 0%);
+    z-index: 4;
+    opacity: 0.85;
+}
+
 #repair {
     position: relative;
     top: 1.5vw;
@@ -49,7 +71,8 @@ h3 {
     transform: translate(-50%, 0%);
     padding: 1vw 3vw;
     background-color: rgb(154, 215, 251);
-    border-radius: 1.5vw;
+    border-radius: 1vw;
+    margin: -2vw 0 3vw 0;
 }
 
 #stopVideo {
