--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -30,7 +30,8 @@ h2 {
 h3 {
     font-size: 1vw;
     font-weight: 400;
-    /* border: 0.2vw solid #464646; */
+    border: 0.2vw solid #272626;
+    box-shadow: inset 0.1vw 0 0.7vw white;
     margin-bottom: 2vw;
     position: absolute;
     z-index: 3;
