--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -25,6 +25,7 @@ h2 {
     left: 50%;
     transform: translate(-50%, 0%);
     margin-bottom: 2vw;
+    box-shadow: 0vw 0.5vw 1vw #6d6d6d;
 }
 
 h3 {
