--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -20,31 +20,30 @@ h2 {
 
 #cdPlayer {
     width: 56%;
-    height: 5vw;
+    height: 6vw;
     position: relative;
     left: 50%;
     transform: translate(-50%, 0%);
-    margin-bottom: 2vw;
-    box-shadow: 0vw 0.5vw 1vw #6d6d6d;
+    /* margin-bottom: 2vw; */
+    /* box-shadow: 0vw 0.5vw 1vw #6d6d6d; */
 }
 
 h3 {
+    width: 20%;
     font-size: 1vw;
     font-weight: 400;
-    border: 0.2vw solid #272626;
+    border: 0.3vw solid #272626;
     box-shadow: inset 0.1vw 0 0.7vw white;
-    position: absolute;
-    z-index: 3;
-    left: 50%;
-    transform: translate(-50%, 0%);
-}
-
-#cdNote {
-    display: flex;
+    padding: 0.5vw;
 }
 
 #tv {
     width: 50%;
+}
+
+#buttons {
+    width: 55%;
+    top: 0.1vw;
 }
 
 #crack {
@@ -94,7 +93,7 @@ h3 {
     padding: 0.5vw 1vw;
     background-color: rgb(154, 215, 251);
     border-radius: 0.5vw;
-    margin: 0vw 0 2vw 0;
+    margin: 2vw 0 0 0;
 }
 
 #stopVideo {
