--- a/Other/mobileCSS.css
+++ b/Other/mobileCSS.css
@@ -1,10 +1,15 @@
 body {
     /* background-size: 70vw; */
+    margin: 0;
 }
 
 #container {
     column-gap: 4vw;
     /* background-size: 70vw; */
+}
+
+#toast {
+    display: none;
 }
 
 h1 {
@@ -18,12 +23,20 @@ h3 {
 }
 
 h3 {
-    max-width: 90vw;
-    margin-bottom: 1vw;
+    padding: 0.5vw 0.5vw;
+    box-shadow: inset 0.2vw 0.2vw 1.5vw white, inset -0.2vw -0.2vw 1.5vw white;
 }
 
-#tv {
-    width: 96%;
+#buttons {
+    top: 0.5vw;
+}
+
+#cdPlayer {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    /* margin-bottom: 2vw; */
+    /* box-shadow: 0vw 0.5vw 1vw #6d6d6d; */
 }
 
 #crack {
@@ -72,7 +85,7 @@ h3 {
     padding: 1vw 3vw;
     background-color: rgb(154, 215, 251);
     border-radius: 1vw;
-    margin: -2vw 0 3vw 0;
+    margin: 1vw 0 3vw 0;
 }
 
 #stopVideo {
@@ -90,13 +103,6 @@ h3 {
     left: 2%;
     font-size: 2vw;
     background-color: #ffffff;
-}
-
-#helloWorld,
-#helloWorldGlitch {
-    max-width: 65%;
-    left: 41%;
-    top: 6vw;
 }
 
 #H {
@@ -208,10 +214,10 @@ h3 {
     }
 
     h3 {
+        width: 30%;
         font-size: 3vw;
         padding: 2vw;
-        border-radius: 2vw;
-        border: 0.3vw solid #464646;
+        border: 0.5vw solid #464646;
     }
 
     #H {
@@ -250,6 +256,26 @@ h3 {
         border-radius: 3vw;
     }
 
+    #tv {
+        width: 96%;
+    }
+
+    #buttons {
+        width: 90%;
+    }
+
+    #cdPlayer {
+        width: 91%;
+        height: 13vw;
+    }
+
+    #helloWorld,
+    #helloWorldGlitch {
+        max-width: 65%;
+        left: 41%;
+        top: 6vw;
+    }
+
     #repair {
         font-size: 3.5vw;
     }
@@ -263,9 +289,9 @@ h3 {
     }
 
     h3 {
+        width: 25%;
         font-size: 2vw;
-        padding: 2vw;
-        border-radius: 2vw;
+        padding: 1vw;
         border: 0.3vw solid #464646;
     }
 
@@ -303,6 +329,27 @@ h3 {
         max-width: 80vw;
         border: 0.5vw solid #343434;
         border-radius: 3vw;
+    }
+
+    #tv {
+        width: 70%;
+    }
+
+    #buttons {
+        width: 70%;
+        top: 0;
+    }
+
+    #cdPlayer {
+        width: 71%;
+        height: 10vw;
+    }
+
+    #helloWorld,
+    #helloWorldGlitch {
+        max-width: 48%;
+        left: 43%;
+        top: 5vw;
     }
 
     #repair {
