--- a/Student/mobileCSS.css
+++ b/Student/mobileCSS.css
@@ -29,6 +29,21 @@ h2 {
     text-align: center;
 }
 
+#popUp {
+    position: absolute;
+    transform: translate(-50%, 0);
+    transform-origin: 0%;
+    animation: pop1 0.5s linear forwards;
+    opacity: 0;
+}
+
+#popUp2 {
+    position: absolute;
+    transform: translate(-50%, 0);
+    animation: pop2 0.5s linear forwards 0.35s;
+    opacity: 0;
+}
+
 h5>div {
     max-width: 70%;
     margin: auto;
@@ -198,6 +213,7 @@ p {
     }
 
     #container {
+        margin-top: 40vw;
         max-width: 100vw;
     }
 
@@ -222,7 +238,7 @@ p {
     }
 
     #letsLearn {
-        margin-top: 15vw;
+        margin-top: 20vw;
     }
 
     #sources,
@@ -255,11 +271,58 @@ p {
     }
 
     #popUp {
-        max-width: 70vw;
-        position: relative;
-        top: 14vw;
-        left: 43%;
-        transform: translate(-50%, 0);
+        max-width: 55vw;
+        top: 20vw;
+        left: 40%;
+    }
+    
+    #popUp2 {
+        max-width: 35vw;
+        top: 40vw;
+        left: 69%;
+    }
+
+    @keyframes pop1 {
+
+        0% {
+            opacity: 0;
+            max-width: 30vw;
+        }
+    
+        50% {
+            opacity: 1;
+            max-width: 57vw;
+        }
+    
+        70% {
+            max-width: 48vw;
+        }
+    
+        100% {
+            max-width: 55vw;
+            opacity: 1;
+        }
+    }
+    
+    @keyframes pop2 {
+        0% {
+            opacity: 0;
+            max-width: 15vw;
+        }
+    
+        50% {
+            opacity: 1;
+            max-width: 37vw;
+        }
+    
+        70% {
+            max-width: 31vw;
+        }
+    
+        100% {
+            max-width: 35vw;
+            opacity: 1;
+        }
     }
 
     #vector {
@@ -363,6 +426,7 @@ p {
     }
 
     #container {
+        margin-top: 20vw;
         max-width: 100%;
     }
 
@@ -392,7 +456,7 @@ p {
     }
 
     #letsLearn {
-        margin: 8vw 0 -8vw 0;
+        margin: 10vw 0 -8vw 0;
     }
 
     #sources,
@@ -447,11 +511,58 @@ p {
     }
 
     #popUp {
-        max-width: 50vw;
-        position: relative;
-        top: 10vw;
-        left: 25%;
-        transform: translate(-50%, 0);
+        max-width: 40vw;
+        top: 13vw;
+        left: 40%;
+    }
+    
+    #popUp2 {
+        max-width: 25vw;
+        top: 23vw;
+        left: 65%;
+    }
+
+    @keyframes pop1 {
+
+        0% {
+            opacity: 0;
+            max-width: 20vw;
+        }
+    
+        50% {
+            opacity: 1;
+            max-width: 43vw;
+        }
+    
+        70% {
+            max-width: 38vw;
+        }
+    
+        100% {
+            max-width: 40vw;
+            opacity: 1;
+        }
+    }
+    
+    @keyframes pop2 {
+        0% {
+            opacity: 0;
+            max-width: 10vw;
+        }
+    
+        50% {
+            opacity: 1;
+            max-width: 28vw;
+        }
+    
+        70% {
+            max-width: 21vw;
+        }
+    
+        100% {
+            max-width: 25vw;
+            opacity: 1;
+        }
     }
 
     #vector {
@@ -539,7 +650,6 @@ p {
     max-width: 100%;
     text-align: start;
 }
-
 
 .darkBack {
     background-color: antiquewhite;
