--- a/mainCSS2.css
+++ b/mainCSS2.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     background-color: #fefefe;
     max-height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 video {
