--- a/Recruiter/mobileCSS.css
+++ b/Recruiter/mobileCSS.css
@@ -244,6 +244,7 @@ footer {
 
     h5 {
         max-width: 80vw;
+        font-size: 3vw;
     }
 
     div ul li a {
@@ -368,6 +369,7 @@ footer {
 
     h5 {
         max-width: 50vw;
+        font-size: 1.7vw;
     }
 
     div ul li a {
