--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -51,7 +51,7 @@ h3 {
 #crack {
     max-width: 13vw;
     position: absolute;
-    top: 13vw;
+    top: 14vw;
     left: 53%;
     transform: translate(-50%, 0%);
     z-index: 4;
@@ -60,7 +60,7 @@ h3 {
 #crack2 {
     max-width: 5vw;
     position: absolute;
-    top: 22vw;
+    top: 23vw;
     left: 40%;
     transform: translate(-50%, 0%);
     z-index: 4;
@@ -69,7 +69,7 @@ h3 {
 #hole {
     max-width: 5vw;
     position: absolute;
-    top: 15.5vw;
+    top: 16.5vw;
     left: 70%;
     transform: translate(-50%, 0%);
     z-index: 4;
@@ -79,7 +79,7 @@ h3 {
 #hole2 {
     max-width: 2.5vw;
     position: absolute;
-    top: 12vw;
+    top: 13vw;
     left: 68%;
     transform: translate(-50%, 0%);
     z-index: 4;
@@ -120,7 +120,7 @@ h3 {
 #helloWorldGlitch {
     max-width: 35%;
     left: 45%;
-    top: 10.5vw;
+    top: 11.5vw;
 }
 
 #hello {
@@ -235,6 +235,17 @@ h3 {
     justify-items: center;
     font-size: 1.2vw;
 }
+
+
+#facts {
+    width: 90vw;
+    margin: 1vw auto;
+}
+
+label,input{
+    /* margin: 0.5vw 0.2vw; */
+}
+
 
 #toast {
     max-width: max-content;
