--- a/Other/mobileCSS.css
+++ b/Other/mobileCSS.css
@@ -26,6 +26,10 @@ h3 {
     box-shadow: inset 0.2vw 0.2vw 1.5vw white, inset -0.2vw -0.2vw 1.5vw white;
 }
 
+#hello {
+    height: max-content;
+}
+
 #buttons {
     top: 0.5vw;
 }
@@ -39,9 +43,9 @@ h3 {
 }
 
 #crack {
-    max-width: 25vw;
+    max-width: 23vw;
     position: absolute;
-    top: 10vw;
+    top: 30vw;
     left: 52%;
     transform: translate(-50%, 0%);
     z-index: 4;
@@ -50,7 +54,7 @@ h3 {
 #crack2 {
     max-width: 10vw;
     position: absolute;
-    top: 27vw;
+    top: 47vw;
     left: 33%;
     transform: translate(-50%, 0%);
     z-index: 4;
@@ -59,7 +63,7 @@ h3 {
 #hole {
     max-width: 11vw;
     position: absolute;
-    top: 13vw;
+    top: 23vw;
     right: 5%;
     transform: translate(-50%, 0%);
     z-index: 4;
@@ -69,8 +73,8 @@ h3 {
 #hole2 {
     max-width: 5vw;
     position: absolute;
-    top: 6vw;
-    right: 3.5%;
+    top: 35vw;
+    right: 4%;
     transform: translate(-50%, 0%);
     z-index: 4;
     opacity: 0.85;
@@ -272,7 +276,7 @@ h3 {
     #helloWorldGlitch {
         max-width: 65%;
         left: 41%;
-        top: 6vw;
+        top: 24vw;
     }
 
     #repair {
@@ -348,7 +352,7 @@ h3 {
     #helloWorldGlitch {
         max-width: 48%;
         left: 43%;
-        top: 5vw;
+        top: 20vw;
     }
 
     #repair {
