--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -131,7 +131,14 @@ h3 {
 #startVideo:hover,
 #stopVideo:hover,
 #home:hover,
-#repair:hover {
+#repair:hover,
+#insectFactsRadio:hover,
+#photoFactsRadio:hover,
+#artFactsRadio:hover,
+label:hover,
+#gmail:hover,
+#linkedIn:hover,
+.radioGroup:hover {
     cursor: pointer;
 }
 
@@ -204,11 +211,6 @@ h3 {
 
 #gmail:hover,
 #linkedIn:hover {
-    cursor: pointer;
-}
-
-#gmail:hover,
-#linkedIn:hover {
     opacity: 0.8;
 }
 
@@ -237,14 +239,71 @@ h3 {
 }
 
 
+
+input {
+    accent-color: black;
+}
+
+#facts>h2 {
+    background-color: #FEBE98;
+}
+
+#radioButtons {
+    width: max-content;
+    margin: 1vw auto;
+    border-radius: 0.8vw;
+    padding: 1vw;
+    /* box-shadow: 0.1vw 0.1vw 0.3vw #000000; */
+}
+
+.radioGroup {
+    padding: 1.5vw;
+    margin: 1vw;
+    font-size: 1.2vw;
+    border-radius: 0.5vw;
+    box-shadow: inset -0.05vw -0.05vw 0.3vw #000000;
+    /* background-color: rgb(250, 241, 230); */
+    /* box-shadow: 0.05vw 0.05vw 0.2vw #464646; */
+}
+
+.radioGroup:hover {
+    background-color: rgb(219, 254, 254);
+    /* box-shadow: -0.2vw -0.2vw 0.5vw #ffffff, 0.1vw 0.1vw 0.4vw #3e3e3e; */
+    box-shadow: inset 0.05vw 0.05vw 0.3vw #000000;
+    transition: 200ms;
+}
+
+.radioGroupColor {
+    background-color: rgb(147, 236, 236);
+    box-shadow: inset -0.05vw -0.05vw 0.3vw #000000;
+}
+
 #facts {
     width: 90vw;
     margin: 1vw auto;
+    border: 0.2vw solid #343434;
+    border-radius: 0.8vw;
+    background-color: rgb(88, 88, 88);
 }
 
-label,input{
-    /* margin: 0.5vw 0.2vw; */
+.factsPara {
+    padding: 3vw;
+    border-radius: 0 0 0.8vw 0.8vw;
 }
+
+#insectPara,
+#photoPara,
+#artPara {
+    display: none;
+    background-color: antiquewhite;
+}
+
+li {
+    width: max-content;
+    margin: 0 auto;
+    list-style-type: square;
+}
+
 
 
 #toast {
