--- a/mainCSS1.css
+++ b/mainCSS1.css
@@ -31,7 +31,7 @@ h2 {
     width: max-content;
     font-size: 1.7vw;
     max-height: max-content;
-    background-color: #DF7F83;
+    background-color: #e88d90;
     margin: 0;
     padding: 1.5% 4%;
     text-align: center;
