--- a/Other/laptopCSS.css
+++ b/Other/laptopCSS.css
@@ -245,12 +245,12 @@ input {
 }
 
 #facts>h2 {
-    background-color: #FEBE98;
+    background-color: #fec7a8;
 }
 
 #radioButtons {
     width: max-content;
-    margin: 1vw auto;
+    margin: 0.5vw auto;
     border-radius: 0.8vw;
     padding: 1vw;
     /* box-shadow: 0.1vw 0.1vw 0.3vw #000000; */
@@ -258,48 +258,61 @@ input {
 
 .radioGroup {
     padding: 1.5vw;
-    margin: 1vw;
+    margin: 0 0.5vw;
     font-size: 1.2vw;
-    border-radius: 0.5vw;
+    border-radius: 0.3vw;
     box-shadow: inset -0.05vw -0.05vw 0.3vw #000000;
+    background-color: rgb(255, 246, 234);
     /* background-color: rgb(250, 241, 230); */
     /* box-shadow: 0.05vw 0.05vw 0.2vw #464646; */
 }
 
 .radioGroup:hover {
-    background-color: rgb(219, 254, 254);
-    /* box-shadow: -0.2vw -0.2vw 0.5vw #ffffff, 0.1vw 0.1vw 0.4vw #3e3e3e; */
-    box-shadow: inset 0.05vw 0.05vw 0.3vw #000000;
+    box-shadow: inset -0.05vw -0.05vw 0.3vw #000000;
     transition: 200ms;
 }
 
+.radioGroup:active {
+    box-shadow: inset 0.05vw 0.05vw 0.3vw #000000;
+}
+
 .radioGroupColor {
-    background-color: rgb(147, 236, 236);
+    /* background-color: rgb(147, 236, 236); */
+    background-color: rgb(254, 207, 148);
     box-shadow: inset -0.05vw -0.05vw 0.3vw #000000;
 }
 
 #facts {
-    width: 90vw;
-    margin: 1vw auto;
+    width: 75vw;
+    margin: 3vw auto 1vw auto;
     border: 0.2vw solid #343434;
     border-radius: 0.8vw;
-    background-color: rgb(88, 88, 88);
+    background-color: rgb(133, 133, 133);
 }
 
 .factsPara {
     padding: 3vw;
-    border-radius: 0 0 0.8vw 0.8vw;
+    border-radius: 0 0 0.7vw 0.7vw;
+    background-color: rgb(243, 243, 243);
+    font-size: 1vw;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 #insectPara,
 #photoPara,
 #artPara {
     display: none;
-    background-color: antiquewhite;
+}
+
+ul {
+    text-align: start;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 li {
-    width: max-content;
+    width: 40vw;
+    max-width: 60vw;
     margin: 0 auto;
     list-style-type: square;
 }
