--- a/Other/mobileCSS.css
+++ b/Other/mobileCSS.css
@@ -236,23 +236,23 @@ h3 {
 
     #crack {
         max-width: 23vw;
-        top: 29vw;
+        top: 30vw;
     }
 
     #crack2 {
         max-width: 10vw;
-        top: 46vw;
+        top: 47vw;
     }
 
     #hole {
         max-width: 11vw;
-        top: 22vw;
+        top: 23vw;
         right: 5%;
     }
 
     #hole2 {
         max-width: 5vw;
-        top: 34vw;
+        top: 35vw;
         right: 4%;
     }
 
@@ -269,7 +269,7 @@ h3 {
     #helloWorldGlitch {
         max-width: 65%;
         left: 41%;
-        top: 23vw;
+        top: 24vw;
     }
 
     #repair {
@@ -285,6 +285,19 @@ h3 {
     #contactVid {
         max-width: 50vw;
         margin: 2.5vw auto;
+    }
+
+    #radioButtons {
+        grid-template-areas: 'RG1 RG3' 'RG2 RG2';
+    }
+
+    .radioGroup {
+        font-size: 3vw;
+    }
+
+    .factsPara {
+        font-size: 3vw;
+        padding: 7vw;
     }
 }
 
@@ -344,23 +357,23 @@ h3 {
 
     #crack {
         max-width: 20vw;
-        top: 22vw;
+        top: 23vw;
     }
 
     #crack2 {
         max-width: 7vw;
-        top: 34vw;
+        top: 35vw;
     }
 
     #hole {
         max-width: 8vw;
-        top: 19vw;
+        top: 20vw;
         right: 16%;
     }
 
     #hole2 {
         max-width: 3vw;
-        top: 27vw;
+        top: 28vw;
         right: 18%;
     }
 
@@ -378,7 +391,7 @@ h3 {
     #helloWorldGlitch {
         max-width: 48%;
         left: 43%;
-        top: 18vw;
+        top: 19vw;
     }
 
     #repair {
@@ -395,4 +408,62 @@ h3 {
         max-width: 30vw;
         margin: 2.5vw auto;
     }
+
+    #radioButtons {
+        grid-template-areas: 'RG1 RG2 RG3';
+    }
+
+    .radioGroup {
+        font-size: 1.7vw;
+    }
+
+    .factsPara {
+        font-size: 2vw;
+        padding: 3vw;
+    }
+}
+
+
+
+#radioButtons {
+    width: max-content;
+    margin: 0 auto;
+    border-radius: 0.8vw;
+    padding-top: 4vw;
+    display: grid;
+    grid-template-columns: max-content;
+    row-gap: 2vw;
+    column-gap: 3vw;
+}
+
+.radioGroup {
+    padding: 2vw 3vw;
+    margin: 0 0.5vw;
+    border-radius: 0.3vw;
+    box-shadow: inset -0.2vw -0.2vw 0.6vw #000000;
+    background-color: rgb(255, 246, 234);
+}
+
+.radioGroup:active {
+    box-shadow: inset 0.2vw 0.2vw 0.7vw #000000;
+}
+
+.radioGroupColor {
+    background-color: rgb(255, 216, 169);
+    box-shadow: inset -0.2vw -0.2vw 0.6vw #000000;
+}
+
+#facts {
+    width: 95%;
+    margin: 4vw auto 1vw auto;
+    border-radius: 3.5vw;
+    /* text-align: center; */
+    border: 0.5vw solid #404040;
+}
+
+.factsPara {
+    border-radius: 0 0 3vw 3vw;
+    background-color: rgb(243, 243, 243);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
